Start BugTracker .NET6

--- a/TheBugNet6/TheBugNet6.csproj
+++ b/TheBugNet6/TheBugNet6.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-TheBugNet6-8F2DFC7F-132A-42A7-A108-798E948CDB6C</UserSecretsId>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
